fix(ContextMenu): separators in context menu are wrong color

--- a/packages/webui/src/client/styles/contextMenu.scss
+++ b/packages/webui/src/client/styles/contextMenu.scss
@@ -16,7 +16,7 @@ nav.react-contextmenu {
 
 	hr {
 		margin: 0;
-		border-color: var(--bs-border-color);
+		border-color: #3e4041;
 	}
 
 	.react-contextmenu-item,
